Переделана структура проекта
