# internal/handlers/order_handler/order_handler.go
@@ -1,0 +1,11 @@
+package order_handlers
+
+import "tracking_service/internal/service"
+
+type OrderHandler struct {
+	service service.OrderService
+}
+
+func NewOrderHandler(service service.OrderService) *OrderHandler {
+	return &OrderHandler{service: service}
+}
