# pkg/server/server.go
@@ -8,65 +8,68 @@ import (
 	"gorm.io/gorm"
 	"tracking_service/configs"
 	_ "tracking_service/docs"
-	"tracking_service/internal/delivery/http"
 	"tracking_service/internal/domain"
+	"tracking_service/internal/handlers/order_handler"
+	"tracking_service/internal/handlers/user_handler"
+	"tracking_service/internal/http"
 	"tracking_service/internal/repository"
 	"tracking_service/internal/service"
 	"tracking_service/pkg/db"
 )
 
 type Server struct {
+	app    *echo.Echo
 	config *configs.Config
-	log    *logrus.Logger
+	logger *logrus.Logger
 	db     *gorm.DB
 }
 
-func NewServer(config *configs.Config, log *logrus.Logger) *Server {
+func NewServer(config *configs.Config, logger *logrus.Logger) *Server {
 	return &Server{
 		config: config,
-		log:    log,
+		logger: logger,
 	}
 }
 
 func (s *Server) Run() {
 	database, err := db.Connect(s.config.DB)
 	if err != nil {
-		s.log.Fatal("Could not connect to the database")
+		s.logger.Fatal("Could not connect to the database")
 	}
 	s.db = database
 
 	err = s.db.AutoMigrate(&domain.Order{}, &domain.User{})
 	if err != nil {
-		s.log.Fatal("Could not run migrations")
+		s.logger.Fatal("Could not run migrations")
 	}
 
-	e := echo.New()
+	s.app = echo.New()
 
-	e.Use(middleware.Logger())
-	e.Use(middleware.Recover())
+	s.app.Use(middleware.Logger())
+	s.app.Use(middleware.Recover())
 
-	s.initRoutes(e)
+	s.initRoutes()
 
-	s.log.Fatal(e.Start(":" + s.config.ServerPort))
+	s.logger.Fatal(s.app.Start(":" + s.config.ServerPort))
 }
 
-func (s *Server) initRoutes(e *echo.Echo) {
+func (s *Server) initRoutes() {
 	orderRepo := repository.NewOrderRepository(s.db)
 	orderService := service.NewOrderService(orderRepo)
-	orderHandler := http.NewOrderHandler(orderService)
+	orderHandler := order_handlers.NewOrderHandler(orderService)
 
 	userRepo := repository.NewUserRepository(s.db)
 	userService := service.NewUserService(userRepo, s.config.JWTSecret)
-	userHandler := http.NewUserHandler(userService)
+	userHandler := user_handler.NewUserHandler(userService)
 
-	e.POST("/users/register", userHandler.RegisterUser)
-	e.POST("/users/login", userHandler.LoginUser)
+	s.app.POST("/users/register", userHandler.RegisterUser)
+	s.app.POST("/users/login", userHandler.LoginUser)
 
-	r := e.Group("/orders")
+	r := s.app.Group("/order_handler")
 	r.Use(http.JWTMiddleware(s.config.JWTSecret))
 	r.POST("", orderHandler.CreateOrder)
 	r.GET("/:id", orderHandler.GetOrder)
 	r.PUT("/:id", orderHandler.UpdateOrder)
 
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
+	s.app.GET("/swagger/*", echoSwagger.WrapHandler)
 }
